--- a/src/views/refundForm.ejs
+++ b/src/views/refundForm.ejs
@@ -66,19 +66,30 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Beneficiario</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="nombre_beneficiario_reembolso"
-                                                id="nombre_beneficiario_reembolso"
-                                                placeholder="Nombre del Beneficiario *"
+                                                name="cedula_beneficiario_reembolso"
+                                                id="cedula_beneficiario_reembolso"
+                                                placeholder="Cédula del Beneficiario *"
                                                 class="form-control"
                                                 required
                                             >
                                         </div>
                                     </div>
-                                    </br>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
+                                        <div class="col-sm-9">
+                                            <textarea 
+                                                name="observacion_reembolso"
+                                                id="observacion_reembolso" 
+                                                placeholder="Observaciones *" 
+                                                class="form-control"
+                                                required
+                                            ></textarea>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -124,17 +135,33 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Beneficiario</label>
                                         <div class="col-sm-9">
-                                            <textarea 
-                                                name="observacion_reembolso"
-                                                id="observacion_reembolso" 
-                                                placeholder="Observaciones *" 
+                                            <input 
+                                                type="text"
+                                                name="nombre_beneficiario_reembolso"
+                                                id="nombre_beneficiario_reembolso"
+                                                placeholder="Nombre del Beneficiario *"
                                                 class="form-control"
                                                 required
-                                            ></textarea>
+                                            >
                                         </div>
                                     </div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label"></label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="hidden"
+                                                name=""
+                                                id=""
+                                                placeholder=""
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    </br>
+                                    </br>
+                                    </br>
                                 </div>
                             </div>
                         </div>
