--- a/src/views/ampForm.ejs
+++ b/src/views/ampForm.ejs
@@ -66,29 +66,28 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Beneficiario</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="nombre_beneficiario_amp"
-                                                id="nombre_beneficiario_amp"
-                                                placeholder="Nombre del Beneficiario *"
+                                                name="cedula_beneficiario_amp"
+                                                id="cedula_beneficiario_amp"
+                                                placeholder="Cédula del Beneficiario *"
                                                 class="form-control"
                                                 required
                                             >
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Clínica</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
                                         <div class="col-sm-9">
-                                            <input 
-                                                type="text"
-                                                name="clinica_amp"
-                                                id="clinica_amp"
-                                                placeholder="Clínica *"
+                                            <textarea 
+                                                name="observacion_amp"
+                                                id="observacion_amp" 
+                                                placeholder="Observaciones *" 
                                                 class="form-control"
                                                 required
-                                            >
+                                            ></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -136,28 +135,32 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Beneficiario</label>
                                         <div class="col-sm-9">
-                                            <textarea 
-                                                name="observacion_amp"
-                                                id="observacion_amp" 
-                                                placeholder="Observaciones *" 
+                                            <input 
+                                                type="text"
+                                                name="nombre_beneficiario_amp"
+                                                id="nombre_beneficiario_amp"
+                                                placeholder="Nombre del Beneficiario *"
                                                 class="form-control"
                                                 required
-                                            ></textarea>
-                                        </div>
-                                    </div>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                                        <div class="col-sm-10">
-                                            <input 
-                                                type="hidden" 
-                                                placeholder="" 
-                                                class="form-control"
-                                                disabled
                                             >
                                         </div>
                                     </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Clínica</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text"
+                                                name="clinica_amp"
+                                                id="clinica_amp"
+                                                placeholder="Clínica *"
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    </br>
                                 </div>
                             </div>
                         </div>
