--- a/src/views/editLetterGuarentee.ejs
+++ b/src/views/editLetterGuarentee.ejs
@@ -99,32 +99,29 @@
                                         <% } %>
                                     <% } %>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Beneficiario</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="nombre_beneficiario_carta_aval"
-                                                id="nombre_beneficiario_carta_aval"
-                                                value="<%= letterGuarentee.nombre_beneficiario_carta_aval %>"
+                                                name="cedula_beneficiario_carta_aval"
+                                                id="cedula_beneficiario_carta_aval"
+                                                value="<%= letterGuarentee.cedula_beneficiario_carta_aval %>"
                                                 class="form-control"
                                                 required
                                             >
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Clínica</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
                                         <div class="col-sm-9">
-                                            <input 
-                                                type="text"
-                                                name="clinica_carta_aval"
-                                                id="clinica_carta_aval"
-                                                value="<%= letterGuarentee.clinica_carta_aval %>"
+                                            <textarea 
+                                                name="observacion_carta_aval"
+                                                id="observacion_carta_aval" 
                                                 class="form-control"
                                                 required
-                                            >
+                                            ><%= letterGuarentee.observacion_carta_aval %></textarea>
                                         </div>
                                     </div>
-                                    </br>
                                 </div>
                             </div>
                         </div>
@@ -201,31 +198,45 @@
                                         <% } %>
                                     <% } %>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
-                                        <div class="col-sm-9">
-                                            <textarea 
-                                                name="observacion_carta_aval"
-                                                id="observacion_carta_aval" 
-                                                class="form-control"
-                                                required
-                                            ><%= letterGuarentee.observacion_carta_aval %></textarea>
-                                        </div>
-                                    </div>
-                                    </br>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label"></label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Beneficiario</label>
                                         <div class="col-sm-9">
                                             <input 
-                                                type="hidden"
-                                                name="id_carta_aval"
-                                                id="id_carta_aval"
-                                                value="<%= letterGuarentee.id_carta_aval %>"
+                                                type="text"
+                                                name="nombre_beneficiario_carta_aval"
+                                                id="nombre_beneficiario_carta_aval"
+                                                value="<%= letterGuarentee.nombre_beneficiario_carta_aval %>"
                                                 class="form-control"
+                                                required
                                             >
                                         </div>
                                     </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Clínica</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text"
+                                                name="clinica_carta_aval"
+                                                id="clinica_carta_aval"
+                                                value="<%= letterGuarentee.clinica_carta_aval %>"
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    </br>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="form-group row"><label class="col-sm-3 col-form-label"></label>
+                        <div class="col-sm-9">
+                            <input 
+                                type="hidden"
+                                name="id_carta_aval"
+                                id="id_carta_aval"
+                                value="<%= letterGuarentee.id_carta_aval %>"
+                                class="form-control"
+                            >
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
