Arreglos en el codigo

--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -66,7 +66,7 @@
     });
 </script>
 
-<script>
+<!--script>
     var policy = <%- JSON.stringify(policy) %>;
     function pasarValor() {
         var montoComision = document.getElementById("comision_asociada_recibo").value;
@@ -82,7 +82,7 @@
             document.getElementById("monto_comision_recibo").value = totalComisionPorcen.toFixed(2); 
         }
     }
-</script>
+</script-->
 
 <script>
     var naturalInsureds = <%- JSON.stringify(naturalInsureds) %>;
