--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -154,6 +154,7 @@
                                                         <option value="Incendio">Incendio</option>
                                                         <option value="Riesgo Diversos">Riesgo Diversos</option>
                                                         <option value="Combinado Empresarial">Combinado Empresarial</option>
+                                                        <option value="Combinado Residencial">Combinado Residencial</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -293,6 +294,20 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Grupo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="text"
+                                                        name="grupo_poliza"
+                                                        id="grupo_poliza"
+                                                        placeholder="Grupo *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form-group row">
@@ -397,22 +412,6 @@
                                                 </div>
                                             </div>
                                         <% } %>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        step="0.01"
-                                                        name="comision_asociada_recibo"
-                                                        id="comision_asociada_recibo"
-                                                        onkeyup="pasarValor();"
-                                                        placeholder="Comisión Asociada *"
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -455,22 +454,6 @@
                                                         <option value="Financiamiento">Financiamiento</option>
                                                         <option value="Otros">Otros</option>
                                                     </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Bonificación</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        step="0.01"
-                                                        name="bonificacion_recibo"
-                                                        id="bonificacion_recibo"
-                                                        onkeyup="pasarValor();"
-                                                        placeholder="Bonificación *"
-                                                        class="form-control"
-                                                        required
-                                                    >
                                                 </div>
                                             </div>
                                         </div>
@@ -564,6 +547,21 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01" 
+                                                        name="porcentaje_ejecutivo_suscripcion"
+                                                        id="porcentaje_ejecutivo_suscripcion"
+                                                        placeholder="Porcentaje Ejecutivo de Suscripción *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -605,6 +603,21 @@
                                                         name="porcentaje_atina_comision"
                                                         id="porcentaje_atina_comision"
                                                         placeholder="Porcentaje Atina *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01" 
+                                                        name="porcentaje_ejecutivo_reclamo"
+                                                        id="porcentaje_ejecutivo_reclamo"
+                                                        placeholder="Porcentaje Ejecutivo de Reclamos *" 
                                                         class="form-control"
                                                         required
                                                     >
