--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -151,6 +151,7 @@
                                                         <option value="Cob Amplia + Rcv">Cob Amplia + Rcv</option>
                                                         <option value="Perdida Total + Rcv">Perdida Total + Rcv</option>
                                                         <option value="RCG">RCG</option>
+                                                        <option value="Rcv">Rcv</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -287,6 +288,20 @@
                                                         <option value="Redes Sociales">Redes Sociales</option>
                                                         <option value="Pagina Web">Pagina Web</option>
                                                     </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Grupo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="text"
+                                                        name="grupo_poliza"
+                                                        id="grupo_poliza"
+                                                        placeholder="Grupo *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
                                                 </div>
                                             </div>
                                         </div>
@@ -476,8 +491,9 @@
                                                         type="number"
                                                         name="cantidad_pasajero"
                                                         id="cantidad_pasajero"
-                                                        placeholder="Cantidad de Puestos" 
+                                                        placeholder="Cantidad de Puestos *" 
                                                         class="form-control"
+                                                        required
                                                     >
                                                 </div>
                                             </div>
@@ -607,22 +623,6 @@
                                                 </div>
                                             </div>
                                         <% } %>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        step="0.01"
-                                                        name="comision_asociada_recibo"
-                                                        id="comision_asociada_recibo"
-                                                        onkeyup="pasarValor();"
-                                                        placeholder="Comisión Asociada *"
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -664,22 +664,6 @@
                                                         <option value="Deposito bancario">Deposito bancario</option>
                                                         <option value="Otros">Otros</option>
                                                     </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Bonificación</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        step="0.01"
-                                                        name="bonificacion_recibo"
-                                                        id="bonificacion_recibo"
-                                                        onkeyup="pasarValor();"
-                                                        placeholder="Bonificación *"
-                                                        class="form-control"
-                                                        required
-                                                    >
                                                 </div>
                                             </div>
                                         </div>
@@ -773,6 +757,21 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01" 
+                                                        name="porcentaje_ejecutivo_suscripcion"
+                                                        id="porcentaje_ejecutivo_suscripcion"
+                                                        placeholder="Porcentaje Ejecutivo de Suscripción *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -814,6 +813,21 @@
                                                         name="porcentaje_atina_comision"
                                                         id="porcentaje_atina_comision"
                                                         placeholder="Porcentaje Atina *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01" 
+                                                        name="porcentaje_ejecutivo_reclamo"
+                                                        id="porcentaje_ejecutivo_reclamo"
+                                                        placeholder="Porcentaje Ejecutivo de Reclamos *" 
                                                         class="form-control"
                                                         required
                                                     >
