Nuevos ramos individuales en el modulo de poliza

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -125,6 +125,24 @@
             <li class="list-group-item">
                 Patrimoniales: <%= patrimonialPolicyCount.patrimonial %>
             </li>
+            <li class="list-group-item">
+                Fianza: <%= bailPolicyCount.bail %>
+            </li>
+            <li class="list-group-item">
+                Otros Ramos: <%= anotherBranchPolicyCount.anotherBranch %>
+            </li>
+            <li class="list-group-item">
+                Funerario: <%= funeralPolicyCount.funeral %>
+            </li>
+            <li class="list-group-item">
+                Vida: <%= lifePolicyCount.life %>
+            </li>
+            <li class="list-group-item">
+                AP: <%= apPolicyCount.ap %>
+            </li>
+            <li class="list-group-item">
+                Viaje: <%= travelPolicyCount.travel %>
+            </li>
         </ul>
     </div>
 </div>
