--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -88,15 +88,15 @@
                                     <li><a href="/sistema/add-health-policy">Salud</a></li>
                                     <li><a href="/sistema/add-vehicle-policy">Vehículo</a></li>
                                     <li><a href="/sistema/add-patrimonial-policy">Patrimonial</a></li>
+                                    <li><a href="/sistema/add-bail-policy">Fianza</a></li>
+                                    <li><a href="/sistema/add-another-branch-policy">Otros Ramos</a></li>
+                                    <li><a href="/sistema/add-funeral-policy">Funerario</a></li>
+                                    <li><a href="/sistema/add-life-policy">Vida</a></li>
+                                    <li><a href="/sistema/add-ap-policy">AP</a></li>
+                                    <li><a href="/sistema/add-travel-policy">Viaje</a></li>
                                 </ul>
                             </li>
                             <li><a href="/sistema/policies">Consultar Pólizas</a></li>
-                            <!--li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>
-                            <li><a href="graph_chartjs.html">Chart.js</a></li>
-                            <li><a href="graph_chartist.html">Chartist</a></li>
-                            <li><a href="c3.html">c3 charts</a></li>
-                            <li><a href="graph_peity.html">Peity Charts</a></li>
-                            <li><a href="graph_sparkline.html">Sparkline Charts</a></li-->
                         </ul>
                     </li>
                     <!--li>
@@ -151,21 +151,6 @@
                             <li><a href="/sistema/roles">Consultar Roles</a></li>
                         </ul>
                     </li>
-                    <!--li>
-                        <a href="#"><i class="fa fa-info-circle"></i> <span class="nav-label">Ayuda</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="typography.html">Typography</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="draggable_panels.html">Draggable Panels</a></li> <li><a href="resizeable_panels.html">Resizeable Panels</a></li>
-                            <li><a href="buttons.html">Buttons</a></li>
-                            <li><a href="video.html">Video</a></li>
-                            <li><a href="tabs_panels.html">Panels</a></li>
-                            <li><a href="tabs.html">Tabs</a></li>
-                            <li><a href="notifications.html">Notifications & Tooltips</a></li>
-                            <li><a href="helper_classes.html">Helper css classes</a></li>
-                            <li><a href="badges_labels.html">Badges, Labels, Progress</a></li>
-                        </ul>
-                    </li-->
                 </ul>
             </div>
         </nav>
