--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -458,14 +458,14 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
                                                 <div class="col-sm-9">
                                                     <input 
                                                         type="number"
                                                         step="0.01" 
                                                         name="monto_comision_recibo"
                                                         id="monto_comision_recibo"
-                                                        placeholder="Comisión *" 
+                                                        placeholder="Comisión Asociada *" 
                                                         class="form-control"
                                                         required
                                                     >
