--- a/src/views/anotherBranchPolicyForm.ejs
+++ b/src/views/anotherBranchPolicyForm.ejs
@@ -12,7 +12,7 @@
                 <a>Pólizas</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Agregar Póliza Individual Salud</strong>
+                <strong>Agregar Póliza Individual Otros Ramos</strong>
             </li>
         </ol>
     </div>
@@ -23,13 +23,13 @@
         <div class="col-lg-12">
             <div class="ibox">
                 <div class="ibox-title">
-                    <h5>Póliza Individual Salud</h5>
+                    <h5>Póliza Individual Otros Ramos</h5>
                 </div>
                 <div class="ibox-content">
                     <div id="form" class="wizard-big wizard-health">
                         <h1><i class="fa fa-window-maximize"></i> Póliza</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-policy" method="POST">
+                            <form action="/sistema/add-another-branch-policy" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -120,7 +120,7 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_moneda_poliza">
+                                                    <select class="form-control" name="tipo_moneda">
                                                         <option selected value="0">Seleccione *</option>
                                                             <option value="Bolivar">Bolivar</option>
                                                             <option value="Dólar">Dólar</option>
@@ -136,7 +136,7 @@
                                                         step="0.01"
                                                         name="prima_anual_poliza"
                                                         id="prima_anual_poliza"
-                                                        placeholder="Prima Anual *" 
+                                                        placeholder="Prima *" 
                                                         class="form-control"
                                                         required
                                                     >
@@ -144,14 +144,30 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Suma Asegurada</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="tipo_ramo_poliza">
+                                                        <option selected value="">Seleccione</option>
+                                                        <option value="TRI">TRI</option>
+                                                        <option value="RCG">RCG</option>
+                                                        <option value="Fidelidad de Empleados">Fidelidad de Empleados</option>
+                                                        <option value="Incendio">Incendio</option>
+                                                        <option value="Riesgo Diversos">Riesgo Diversos</option>
+                                                        <option value="Combinado Empresarial">Combinado Empresarial</option>
+                                                        <option value="Combinado Residencial">Combinado Residencial</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tasa</label>
                                                 <div class="col-sm-9">
                                                     <input 
                                                         type="number"
                                                         step="0.01"
-                                                        name="suma_asegurada_poliza"
-                                                        id="suma_asegurada_poliza"
-                                                        placeholder="Suma Asegurada *"
+                                                        name="tasa_poliza"
+                                                        id="tasa_poliza"
+                                                        placeholder="Tasa Póliza *" 
                                                         class="form-control"
                                                         required
                                                     >
@@ -252,9 +268,24 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Suma Asegurada</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01"
+                                                        name="suma_asegurada_poliza"
+                                                        id="suma_asegurada_poliza"
+                                                        placeholder="Suma Asegurada *"
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_canal_poliza">
+                                                    <select class="form-control" name="tipo_canal">
                                                         <option selected value="">Seleccione</option>
                                                         <option value="Venta Regular">Venta Regular</option>
                                                         <option value="Redes Sociales">Redes Sociales</option>
@@ -290,7 +321,7 @@
                         </fieldset>
                         <h1><i class="fa fa-file-text-o"></i> Recibo</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-receipt" method="POST">
+                            <form action="/sistema/add-another-branch-receipt" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -420,6 +451,7 @@
                                                         <option value="Tarjeta de crédito">Tarjeta de crédito</option>
                                                         <option value="Paypal">Paypal</option>
                                                         <option value="Deposito bancario">Deposito bancario</option>
+                                                        <option value="Financiamiento">Financiamiento</option>
                                                         <option value="Otros">Otros</option>
                                                     </select>
                                                 </div>
@@ -453,7 +485,7 @@
                         </fieldset>
                         <h1><i class="fa fa-usd"></i> Comisión</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-commission" method="POST">
+                            <form action="/sistema/add-another-branch-commission" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
