Nuevo Modulo de reportes (Falta por terminar)

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -99,24 +99,6 @@
                             <li><a href="/sistema/policies">Consultar Pólizas</a></li>
                         </ul>
                     </li>
-                    <!--li>
-                        <a href="mailbox.html"><i class="fa fa-exclamation-triangle"></i> <span class="nav-label">Siniestro</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="mailbox.html">Inbox</a></li>
-                            <li><a href="mail_detail.html">Email view</a></li>
-                            <li><a href="mail_compose.html">Compose email</a></li>
-                            <li><a href="email_template.html">Email templates</a></li>
-                        </ul>
-                    </li-->
-                    <!--li>
-                        <a href="mailbox.html"><i class="fa fa-lock"></i> <span class="nav-label">Campaña</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="mailbox.html">Inbox</a></li>
-                            <li><a href="mail_detail.html">Email view</a></li>
-                            <li><a href="mail_compose.html">Compose email</a></li>
-                            <li><a href="email_template.html">Email templates</a></li>
-                        </ul>
-                    </li-->
                     <li>
                         <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reclamos</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
@@ -130,18 +112,18 @@
                             <li><a href="/sistema/amp">Consultar AMP</a></li>
                         </ul>
                     </li>
-                    <!--li>
-                        <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
+                    <li>
+                        <a href="#"><i class="fa fa-clipboard"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="#">Primas Cobradas</a></li>
-                            <!--li><a href="form_advanced.html">Advanced Plugins</a></li>
-                            <li><a href="form_wizard.html">Wizard</a></li>
+                            <li><a href="/sistema/premiums-collected">Primas Cobradas</a></li>
+                            <li><a href="/sistema/commissions-collected">Comisiones Cobradas</a></li>
+                            <!--li><a href="form_wizard.html">Wizard</a></li>
                             <li><a href="form_file_upload.html">File Upload</a></li>
                             <li><a href="form_editors.html">Text Editor</a></li>
                             <li><a href="form_autocomplete.html">Autocomplete</a></li>
-                            <li><a href="form_markdown.html">Markdown</a></li>
+                            <li><a href="form_markdown.html">Markdown</a></li-->
                         </ul>
-                    </li-->
+                    </li>
                     <li>
                         <a href="#"><i class="fa fa-user-circle-o"></i> <span class="nav-label">Gestión de Usuarios</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
