Arreglos en el codigo y Nuevo submodulos de reportes

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -9,6 +9,8 @@
 
     <title>ATINA | Dashboard</title>
 
+    <link rel="shortcut icon" href="/img/ISOTIPO_V1_ATINA.ico" type="image/x-icon">
+
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/font-awesome/css/font-awesome.css" rel="stylesheet">
 
@@ -117,11 +119,8 @@
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/premiums-collected">Primas Cobradas</a></li>
                             <li><a href="/sistema/commissions-collected">Comisiones Cobradas</a></li>
-                            <!--li><a href="form_wizard.html">Wizard</a></li>
-                            <li><a href="form_file_upload.html">File Upload</a></li>
-                            <li><a href="form_editors.html">Text Editor</a></li>
-                            <li><a href="form_autocomplete.html">Autocomplete</a></li>
-                            <li><a href="form_markdown.html">Markdown</a></li-->
+                            <li><a href="/sistema/policy-claims">Siniestralidad Poliza</a></li>
+                            <li><a href="/sistema/global-loss-ratio">Siniestralidad Global</a></li>
                         </ul>
                     </li>
                     <li>
