--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,6 +8,8 @@
 
     <title>Login</title>
 
+    <link rel="shortcut icon" href="/img/ISOTIPO_V1_ATINA.ico" type="image/x-icon">
+
     <link type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" href="/font-awesome/css/font-awesome.css" rel="stylesheet">
 
