--- a/src/views/forgotPassword.ejs
+++ b/src/views/forgotPassword.ejs
@@ -10,6 +10,8 @@
 
     <title>Olvidó su contraseña</title>
 
+    <link rel="shortcut icon" href="/img/ISOTIPO_V1_ATINA.ico" type="image/x-icon">
+
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/font-awesome/css/font-awesome.css" rel="stylesheet">
 
